--- a/biome.json
+++ b/biome.json
@@ -6,6 +6,9 @@
       "recommended": true,
       "style": {
         "useConst": "off"
+      },
+      "suspicious": {
+        "noFallthroughSwitchClause": "off"
       }
     }
   },
